// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateTypes matches snapshot for user operations 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangen. Do not edit. */

// Schema Types
export type CreateUserInput = {
  name: string
  email: string
  avatarUrl?: string
}

export type UpdateUserInput = {
  name?: string
  email?: string
  avatarUrl?: string
}

export type CreatePostInput = {
  title: string
  content: string
  authorId: string
  tags?: Array<string> | null
}

export enum UserRole {
  ADMIN = "ADMIN",
  USER = "USER",
  GUEST = "GUEST"
}


// Fragment Types
export type UserFieldsFragment = {
  id: string
  name: string
  email: string
  avatarUrl: string | null
  createdAt: string
}

// Operation Types
export type GetUserQueryVariables = {
  id: string
}

export type GetUserQuery = {
  user: UserFieldsFragment | null
}

export type ListUsersQueryVariables = {
  limit?: number
  offset?: number
}

export type ListUsersQuery = {
  users: Array<UserFieldsFragment>
}

export type CreateUserMutationVariables = {
  input: CreateUserInput
}

export type CreateUserMutation = {
  createUser: UserFieldsFragment
}

export type UpdateUserMutationVariables = {
  id: string
  input: UpdateUserInput
}

export type UpdateUserMutation = {
  updateUser: UserFieldsFragment | null
}

export type DeleteUserMutationVariables = {
  id: string
}

export type DeleteUserMutation = {
  deleteUser: boolean
}
"
`;

exports[`generateTypes matches snapshot for post operations with nested fragments 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangen. Do not edit. */

// Schema Types
export type CreateUserInput = {
  name: string
  email: string
  avatarUrl?: string
}

export type UpdateUserInput = {
  name?: string
  email?: string
  avatarUrl?: string
}

export type CreatePostInput = {
  title: string
  content: string
  authorId: string
  tags?: Array<string> | null
}

export enum UserRole {
  ADMIN = "ADMIN",
  USER = "USER",
  GUEST = "GUEST"
}


// Fragment Types
export type UserFieldsFragment = {
  id: string
  name: string
  email: string
  avatarUrl: string | null
  createdAt: string
}

export type PostFieldsFragment = {
  id: string
  title: string
  content: string
  published: boolean
  createdAt: string
  tags: Array<string>
}

export type PostWithAuthorFragment = PostFieldsFragment & {
  author: UserFieldsFragment
}

// Operation Types
export type GetUserQueryVariables = {
  id: string
}

export type GetUserQuery = {
  user: UserFieldsFragment | null
}

export type ListUsersQueryVariables = {
  limit?: number
  offset?: number
}

export type ListUsersQuery = {
  users: Array<UserFieldsFragment>
}

export type CreateUserMutationVariables = {
  input: CreateUserInput
}

export type CreateUserMutation = {
  createUser: UserFieldsFragment
}

export type UpdateUserMutationVariables = {
  id: string
  input: UpdateUserInput
}

export type UpdateUserMutation = {
  updateUser: UserFieldsFragment | null
}

export type DeleteUserMutationVariables = {
  id: string
}

export type DeleteUserMutation = {
  deleteUser: boolean
}

export type GetPostsQueryVariables = {
  authorId?: string
}

export type GetPostsQuery = {
  posts: Array<PostWithAuthorFragment>
}

export type CreatePostMutationVariables = {
  input: CreatePostInput
}

export type CreatePostMutation = {
  createPost: PostFieldsFragment
}
"
`;

exports[`generateTypes matches snapshot with custom scalars 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangen. Do not edit. */

// Schema Types
export type CreateUserInput = {
  name: string
  email: string
  avatarUrl?: string
}

export type UpdateUserInput = {
  name?: string
  email?: string
  avatarUrl?: string
}

export type CreatePostInput = {
  title: string
  content: string
  authorId: string
  tags?: Array<string> | null
}

export enum UserRole {
  ADMIN = "ADMIN",
  USER = "USER",
  GUEST = "GUEST"
}


// Fragment Types
export type UserFieldsFragment = {
  id: string
  name: string
  email: string
  avatarUrl: string | null
  createdAt: Date
}

// Operation Types
export type GetUserQueryVariables = {
  id: string
}

export type GetUserQuery = {
  user: UserFieldsFragment | null
}

export type ListUsersQueryVariables = {
  limit?: number
  offset?: number
}

export type ListUsersQuery = {
  users: Array<UserFieldsFragment>
}

export type CreateUserMutationVariables = {
  input: CreateUserInput
}

export type CreateUserMutation = {
  createUser: UserFieldsFragment
}

export type UpdateUserMutationVariables = {
  id: string
  input: UpdateUserInput
}

export type UpdateUserMutation = {
  updateUser: UserFieldsFragment | null
}

export type DeleteUserMutationVariables = {
  id: string
}

export type DeleteUserMutation = {
  deleteUser: boolean
}
"
`;
